@@ -1,5 +1,8 @@
 * Chnages from v1.5 to v1.6 :
-	- Updated the paper status (no longer 'submitted to' but 'accepted')
+	- Updated the paper status in copyright headers 
+	  (no longer 'submitted to' but 'accepted')
+	- Added a basic PLY reader (ASCII only)
+	- Split 'model_in.c' into per-format files
 
 * Changes from v1.4 to v1.5 :
 	- Added the possibility to display the error in grayscale (useful
